--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
 main {
   padding: 10px;
   font-family: "Inter", sans-serif;
+  background-color: #f3f5fc;
+  width: 375px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo {
   margin-bottom: 30px;
+}
+
+.input-text {
+  margin-bottom: 64px;
 }
 
 .input-text label {
@@ -12,31 +20,77 @@ main {
   color: #0a3871;
 }
 
-.input-text input,.output-text__inicio {
+.input-text input,
+.output-text {
   width: 98%;
-  min-height: 200px;
+  min-height: 240px;
+}
+
+.input-text p {
+  font-size: 12px;
+  color: #67808E;
+}
+.input-text p img {
+  height: 10px;
+}
+
+.input-text button {
+  width: 98%;
+  height: 67px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 24px;
+  font-size: 16px;
   border: #0a3871 solid 2px;
-  border-radius: 5px;
+  color: #0a3871;
 }
 
-.input-text p{
-    font-size: 12px;
+#encriptar {
+  margin-bottom: 24px;
+  background-color: #0a3871;
+  color: white;
 }
 
-.output-text__texto{
-    width: 72%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    text-align: center;
+.output-text {
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 10px;
+  padding-top: 30px;
 }
 
-.output-text__texto p:first-child{
-    font-weight: bold;
-    font-size: 24px;
+.output-text__texto {
+  width: 72%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
-.output-text__texto p:last-child{
-    
-    font-size: 16px;
+.output-text__texto span:first-child {
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.output-text__texto span:last-child {
+  font-size: 16px;
+  display: block;
+}
+
+#copiar {
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  font-size: 16px;
+  border: #0a3871 solid 2px;
+  color: #0a3871;
+}
+.boton {
+  width: 80%;
+  height: 67px;
+  border-radius: 24px;
+  /* background-color: red; */
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
