--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,12 @@ main {
   color: #0a3871;
 }
 
-.input-text input,
+.input-text textarea,
 .output-text {
   width: 98%;
   min-height: 240px;
+  /* height: 240px; */
+  resize: none;
 }
 
 .input-text p {
@@ -54,8 +56,8 @@ main {
 .output-text {
   background-color: #fff;
   border-radius: 10px;
-  margin: 10px;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .output-text__texto {
@@ -77,7 +79,7 @@ main {
   display: block;
 }
 
-#copiar {
+.copiar {
   width: 100%;
   height: 100%;
   border-radius: inherit;
@@ -93,4 +95,83 @@ main {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  
+}
+
+#resultado{
+  margin: 10px;
+  /* width: 80%; */
+  min-height: 100px;
+  margin-bottom: 20px;
+}
+
+.mostrar{
+  display: block;
+}
+
+.ocultar{
+  display: none;
+}
+
+.munheco{
+  display: none;
+}
+
+@media (min-width:768px) {
+  main{
+    width: 768px;
+  }
+  .logo{
+    margin-bottom: 116px;
+  }
+  .input-text button{
+    width: 332px;
+    display: inline-block;
+  }
+  #desencriptar{
+    margin-left: 90px;
+  }
+  .output-text{
+    min-height: 100px;
+  }
+}
+@media (min-width:1024px) {
+  main{
+    width: 100vw;
+    min-height: 100vh;
+    padding: 0;
+    position: relative;
+    margin: 0;
+  }
+  .logo{
+    margin-bottom: 80px;
+    padding-top: 20px;
+  }
+  .logo,.input-text{
+    padding-left: 20px;
+  }
+  .input-text{
+    width: 60%;
+    max-width: 750px;
+  }
+  .input-text button{
+    width: 40%;
+    display: inline-block;
+  }
+  #desencriptar{
+    margin-left: 10%;
+  }
+  .output-text{
+    width: 30%;
+    min-height: 490px;
+    position: absolute;
+    top: 30px;
+    right: 5%;
+  }
+  #resultado{
+    min-height: 400px;
+  }
+  .munheco{
+    display: block;
+  }
 }
